--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,39 @@ services:
   hello:
     image: hello:0.2
     container_name: hello
-    ports: 
+    restart: unless-stopped
+    ports:
       - 8000:8000
       - 8001:8001
   prometheus:
     image: prom/prometheus
     container_name: prometheus
     volumes:
-      - .\prom_config:/etc/prometheus/
+      - ./prom_config:/etc/prometheus/
+    restart: unless-stopped
     ports:
       - 9090:9090
+    healthcheck:
+      test: curl --fail http://prometheus:9090 || exit 1
+      interval: 10s
+      retries: 5
+      start_period: 30s
+      timeout: 10s
+  grafana:
+    image: grafana/grafana-oss
+    container_name: grafana
+    volumes:
+      - ./graf_config/provisioning:/etc/grafana/provisioning
+    restart: unless-stopped
+    ports:
+      - 3000:3000
+    healthcheck:
+      test: curl --fail http://grafana:3000 || exit 1
+      interval: 10s
+      retries: 5
+      start_period: 30s
+      timeout: 10s
+    environment:
+       - GF_SECURITY_ADMIN_PASSWORD=MYPASSWORT
+       - GF_USERS_ALLOW_SIGN_UP=false
+    
