--- a/prom_config/prometheus.yml
+++ b/prom_config/prometheus.yml
@@ -1,7 +1,7 @@
 global:
-  scrape_interval:      15s
-  evaluation_interval:  15s
+  scrape_interval: 15s
+  evaluation_interval: 15s
 scrape_configs:
-  - job_name: 'hello-app'
+  - job_name: "hello-app"
     static_configs:
-      - targets: ['host.docker.internal:8001']
+      - targets: ["hello:8001"]
