--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,20 @@
 services:
   hello:
-    image: hello:0.2
+    image: hello:0.3
     container_name: hello
+    volumes:
+      - ${HELLO_LOG_DIR}:/app/log
     restart: unless-stopped
     ports:
-      - 8000:8000
-      - 8001:8001
+      - ${HELLO_EXT_APP_PORT}:8000
   prometheus:
     image: prom/prometheus
     container_name: prometheus
     volumes:
-      - ./prom_config:/etc/prometheus/
+      - ${PROM_CONF_DIR}:/etc/prometheus/
     restart: unless-stopped
     ports:
-      - 9090:9090
+      - ${PROM_EXT_PORT}:9090
     healthcheck:
       test: curl --fail http://prometheus:9090 || exit 1
       interval: 10s
@@ -24,10 +25,10 @@ services:
     image: grafana/grafana-oss
     container_name: grafana
     volumes:
-      - ./graf_config/provisioning:/etc/grafana/provisioning
+      - ${GRAF_CONF_DIR}:/etc/grafana/provisioning
     restart: unless-stopped
     ports:
-      - 3000:3000
+      - ${GRAF_EXT_PORT}:3000
     healthcheck:
       test: curl --fail http://grafana:3000 || exit 1
       interval: 10s
