--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     ports:
       - ${PROM_EXT_PORT}:9090
     healthcheck:
-      test: curl --fail http://prometheus:9090 || exit 1
+      test: wget --no-verbose --tries=1 --spider http://prometheus:9090 || exit 1
       interval: 10s
       retries: 5
       start_period: 30s
@@ -30,7 +30,7 @@ services:
     ports:
       - ${GRAF_EXT_PORT}:3000
     healthcheck:
-      test: curl --fail http://grafana:3000 || exit 1
+      test: wget --no-verbose --tries=1 --spider http://grafana:3000 || exit 1
       interval: 10s
       retries: 5
       start_period: 30s
