Сделал helm chart

--- a/helm/hello-chart/files/graf_config/datasources/prom.yml
+++ b/helm/hello-chart/files/graf_config/datasources/prom.yml
@@ -1,16 +1,14 @@
 apiVersion: 1
-
 deleteDatasources:
   - name: prometheus
     orgId: 1
-
 datasources:
   - name: prometheus
     type: prometheus
     access: proxy
     orgId: 1
     uid: prom-wkaw34ku5yc
-    url: http://prometheus:9090
+    url: http://localhost:9090
     is_default: true
     editable: false
     jsonData:
