--- a/helm/hello-chart/files/prom_config/prometheus.yml
+++ b/helm/hello-chart/files/prom_config/prometheus.yml
@@ -4,4 +4,4 @@ global:
 scrape_configs:
   - job_name: "hello-app"
     static_configs:
-      - targets: ["hello:8001"]
+      - targets: ["localhost:8001"]
